More CSS updates

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+
+display
+
+
 /*! HTML5 Boilerplate v7.3.0 | MIT License | https://html5boilerplate.com/ */
 
 /* main.css 2.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
@@ -262,4 +266,3 @@ textarea {
     page-break-after: avoid;
   }
 }
-
